# tensorflow_nearest_neighbours

./: .clang-tidy  .gitignore  BUILD  CMakeLists.txt  Dockerfile  Dockerfile.toolchain  MANIFEST.in  Makefile  README.md  TODO.md  WORKSPACE  build_pip_pkg.sh  compile_commands.json  configure.sh  linux_build.sh  requirements.txt  run.sh  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  container.def  run.sh  run_apptainer.sh  run_docker.sh
.github/workflows/: pypi-publish-cpu.yaml  pypi-publish.yaml  run_tests.yaml  test.yaml
cc/kernels/: nearest_neighbours.h  nearest_neighbours.metal  nearest_neighbours_kernel.cc  nearest_neighbours_kernel.cu  nearest_neighbours_kernel.metal  nearest_neighbours_kernel.metal.cc  nearest_neighbours_kernel.mm.cc  nearest_neighbours_kernels.cc  nearest_neighbours_kernels.cu  nearest_neighbours_kernels.h  nearest_neighbours_kernels.metal  nearest_neighbours_kernels.mm.cc  nearest_neighbours_kernels_metal.cc
cuda/: cuda.bzl  nearest_neighbours_kernels.cu
gpu/: cuda_configure.bzl  find_cuda_config.py
gpu/crosstool/: BUILD.tpl  CROSSTOOL.tpl  cc_toolchain_config.bzl.tpl
gpu/cuda/: BUILD.tpl  build_defs.bzl.tpl
metal/: BUILD.tpl  build_defs.bzl.tpl  metal.bzl  metal_configure.bzl  metallib_rule.bzl  nearest_neighbours_kernels.metal
nearest_neighbours/: BUILD  __init__.py
nearest_neighbours/cc/kernels/: functor.cpp  functor.h  mtl_nearest_neighbours_kernels.cc  nearest_neighbours.cc  nearest_neighbours.cu  nearest_neighbours.h  nearest_neighbours.metal  nearest_neighbours_kernel.cc  nearest_neighbours_kernel.cu  nearest_neighbours_kernel_metal.cc  nearest_neighbours_kernels.cc  nearest_neighbours_kernels.cu  nearest_neighbours_kernels.metal
nearest_neighbours/cc/ops/: nearest_neighbours_op.cc  nearest_neighbours_ops.cc
nearest_neighbours/python/ops/: nearest_neighbours_ops.py  nearest_neighbours_test.py
python/: nearest_neighbours.py  nearest_neighbours_test.py
python/ops/: nearest_neighbours_test.py
scripts/: configure.sh
tensorflow_nearest_neighbours/: __init__.py
tensorflow_nearest_neighbours/cc/include/: Metal.hpp
tensorflow_nearest_neighbours/cc/kernels/: nearest_neighbours.hpp  nearest_neighbours.metal  nearest_neighbours_kernel.cc  nearest_neighbours_kernel.cu  nearest_neighbours_kernel.mm  nearest_neighbours_kernel.mm.cc
tensorflow_nearest_neighbours/cc/ops/: nearest_neighbours_op.cc
tensorflow_nearest_neighbours/python/: nearest_neighbours.py
test/: nearest_neighbours_test.py
tests/: nearest_neighbours_test.py
tf/: tf.bzl  tf_configure.bzl
