[metadata]
name = tensorflow_nearest_neighbours
version = 0.0.2
author = Artem Sereda
author_email = artem.sereda@campus.tu-berlin.de
description = Nearest neighbours word embedding computation
long_description = file: README.md
long_description_content_type = markdown
keywords =
    tensorflow
    custom op

classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
requires =
    tensorflow; sys_platform != 'darwin'
    tensorflow_macos; sys_platform == 'darwin'